--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "deploy": "gh-pages"
   },
   "devDependencies": {
+    "eslint": "^8.26.0",
     "vite": "^2.3.0"
   },
   "dependencies": {
+    "babylonjs": "^5.29.0",
     "gh-pages": "^3.2.3",
     "three": "^0.128.0",
     "three-ziploader": "^0.0.1"
